<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarNota.Agregar_Nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <!-- UID DEL USUARIO -->
        <TextView
            android:id="@+id/Uid_Usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:hint="@string/Uid_Usuario"
            android:textSize="18sp" />

        <!-- CORREO DEL USUARIO -->
        <TextView
            android:id="@+id/Correo_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:hint="@string/Correo_usuario"
            android:textSize="18sp" />

        <!-- FECHA Y HORA ACTUAL DEL DISPOSITIVO -->
        <TextView
            android:id="@+id/Fecha_hora_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:hint="@string/Fecha_hora_actual"
            android:textSize="18sp" />

        <!-- TÍTULO -->
        <EditText
            android:id="@+id/Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:hint="@string/Titulo"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- DESCRIPCIÓN -->
        <EditText
            android:id="@+id/Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="start"
            android:hint="@string/Descripcion"
            android:minHeight="150dp"
            android:textSize="28sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <!-- BOTÓN PARA ABRIR CALENDARIO -->
            <Button
                android:id="@+id/Btn_Calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Btn_Calendario"
                app:icon="@drawable/icono_calendario" />

            <!-- VISUALIZAR FECHA ELEGIDA -->
            <TextView
                android:id="@+id/Fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/robotoslab"
                android:hint="@string/Fecha"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- ESTADO DE LA NOTA -->
        <TextView
            android:id="@+id/Estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotoslab"
            android:text="@string/Estado"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>