<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contactos.Agregar_Contacto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Uid del usuario que realizará el registro de contactos -->
        <TextView
            android:id="@+id/Uid_Usuario_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:text="@string/Uid_Usuario_C"
            android:textSize="20sp"
            android:visibility="gone" />

        <!-- Icono -->
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/agregar_contacto_bd" />

        <!-- Nombres del contacto -->
        <EditText
            android:id="@+id/Nombres_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotoslab"
            android:hint="@string/Nombres_C"
            android:inputType="textPersonName" />

        <!-- Apellidos del contacto -->
        <EditText
            android:id="@+id/Apellidos_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:hint="@string/Apellidos_C"
            android:inputType="textPersonName" />

        <!-- Correo del contacto -->
        <EditText
            android:id="@+id/Correo_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:hint="@string/Correo_C"
            android:inputType="textEmailAddress" />

        <!-- Teléfono del contacto -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Teléfono contacto -->
            <TextView
                android:id="@+id/Telefono_C"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/robotoslab"
                android:hint="@string/Telefono_C"
                android:textSize="20sp" />

            <!-- Código país -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Editar_Telefono_C"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@drawable/editar_telefono" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Edad del contacto -->
        <EditText
            android:id="@+id/Edad_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:hint="@string/Edad_C"
            android:inputType="number" />

        <!-- Dirección del contacto -->
        <EditText
            android:id="@+id/Direccion_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:hint="@string/Direccion_C"
            android:inputType="text" />

        <!-- Botón para registrar contacto -->
        <Button
            android:id="@+id/Btn_Guardar_Contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:text="@string/Btn_Guardar_Contacto" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>