<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <!-- Imagen de contacto -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Imagen_c_Item"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/imagen_contacto" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <!-- Id de contacto -->
            <TextView
                android:id="@+id/Id_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab"
                android:text="@string/Id_c_Item"
                android:textSize="18sp" />

            <!-- Uid del usuario -->
            <TextView
                android:id="@+id/Uid_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab"
                android:text="@string/Uid_c_Item"
                android:textSize="18sp" />

            <!-- Nombre de contacto -->
            <TextView
                android:id="@+id/nombres_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab"
                android:text="@string/nombres_c_Item"
                android:textSize="18sp" />

            <!-- Apellidos de contacto -->
            <TextView
                android:id="@+id/apellidos_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab"
                android:text="@string/apellidos_c_Item"
                android:textSize="18sp" />

            <!-- Correo de contacto -->
            <TextView
                android:id="@+id/correo_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab"
                android:text="@string/correo_c_Item"
                android:textSize="18sp" />

            <!-- Teléfono de contacto -->
            <TextView
                android:id="@+id/telefono_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab"
                android:text="@string/telefono_c_Item"
                android:textSize="18sp" />

            <!-- Edad de contacto -->
            <TextView
                android:id="@+id/edad_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab"
                android:text="@string/edad_c_Item"
                android:textSize="18sp" />

            <!-- Dirección del contacto -->
            <TextView
                android:id="@+id/direccion_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab"
                android:text="@string/direccion_c_Item"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>