<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="filtro.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab"
        android:text="@string/FiltroTXT"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Todas_notas"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab"
        android:text="@string/Todas_notas" />

    <Button
        android:id="@+id/Notas_Finalizadas"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab"
        android:text="@string/Notas_Finalizadas" />

    <Button
        android:id="@+id/Notas_No_Finalizadas"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab"
        android:text="@string/Notas_No_Finalizadas" />

</androidx.appcompat.widget.LinearLayoutCompat>