<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="calendario.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab"
        android:text="@string/Txt_hoy"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Fecha_hoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab"
        android:text="@string/Fecha_hoy"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Btn_cerrar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab"
        android:text="@string/Btn_cerrar" />

</androidx.appcompat.widget.LinearLayoutCompat>