<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:gravity="center">

    <!-- Animación -->
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="calendario.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />

    <!-- TÍTULO -->
    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/robotoslab"
        android:textSize="30sp"/>

    <!-- BOTÓN LOGIN -->
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/Btn_Login"
        android:text="@string/Btn_Login"
        android:fontFamily="@font/robotoslab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- BOTÓN REGISTRO -->
    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/Btn_Registro"
        android:fontFamily="@font/robotoslab"
        android:text="@string/Btn_Registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>