<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoslab"
        android:gravity="center"
        android:text="@string/ElegirOpcionContactoTXT"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="seleccionar.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />

    <Button
        android:id="@+id/Btn_Eliminar_C"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab"
        android:text="@string/Btn_Eliminar_C"
        app:icon="@drawable/icono_eliminar_cd" />

    <Button
        android:id="@+id/Btn_Actualizar_C"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab"
        android:text="@string/Btn_Actualizar_C"
        app:icon="@drawable/icono_actualizar_cd" />

</androidx.appcompat.widget.LinearLayoutCompat>